add class 'none' to directing div

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		</div> 
 		<!-- FIN MENU -->
 
-                <div id="directing" class="paragraph">
+                <div id="directing" class="none paragraph">
                     <div class="unit">
                     <h3>Documentaries</h3>
                     <h4>"Are you recording everything Adrian?"</h4>
