--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>DJ PELUCA | ADRIAN BARRERA SERVAN  | NOT FOUND</title>
-        <meta name="description" content="I'm Adrian Barrera Servan alias DJ PELUCA I comunicate & compute. I'm 4 P0bl3m S0lv3r" />
-		<meta name="author" content="Adrian Barrera Servan DJ Peluca" />
-		<meta name="keywords" content="Adrian Barrera Servan, Adrian Barrera, Adrian, DJ Peluca, djpeluca, comunicate, compute, pr0bl3m, problem, s0lv3r, solver, problem solver, pr0bl3m s0lv3r" />
+        <title>DJPELUCA | Pr0b13m S0lv3r!</title>
+        <meta name="description" content="I'm djpeluca alias Adrian Barrera Servan. I'm 4 P0bl3m S0lv3r. I communicate & compute. I do stuff" />
+		<meta name="author" content="djpeluca" />
+		<meta name="keywords" content="Adrian Barrera Servan, Adrian Barrera, Adrian, DJ Peluca, djpeluca, communicate, compute, pr0bl3m, problem, s0lv3r, solver, problem solver, pr0bl3m s0lv3r" />
 		<meta property="og:image" content="http://djpeluca.com/img/djpeluca.png"/>
-		<meta property="og:title" content="DJ Peluca | Adrian Barrera Servan | Soy Una Manzana"/>
-		<meta property="og:url" content="http://djpeluca.com/soy-una-manzana/"/>
-		<meta property="og:description" content="I'm Adrian Barrera Servan alias DJ PELUCA I comunicate & compute. I'm 4 P0bl3m S0lv3r" />
-		<meta property="og:site_name" content="DJ Peluca"/>
+		<meta property="og:title" content="DJPELUCA | Pr0b13m S0lv3r!"/>
+		<meta property="og:url" content="http://djpeluca.com"/>
+		<meta property="og:description" content="I'm djpeluca alias Adrian Barrera Servan. I'm 4 P0bl3m S0lv3r. I communicate & compute. I do stuff" />
+		<meta property="og:site_name" content="DJPELUCA"/>
 		<meta property="og:type" content="website"/>
 		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -38,7 +38,9 @@
 <div class="video">
 	<div class="containter">
 		<h1>404 NOT FOUND</h1>
-		<p>Sorry.</p>
+        <div id="djpeluca" class="mainimage" original-title="<p>Sorry!</p></></di>">
+            </div>
+		<p><a style="color:red;text-decoration:none" href="/">Go Home</a></p>
 	</div>
 </div>
 </body>
