--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>DJ PELUCA | ADRIAN BARRERA SERVAN</title>
-        <meta name="description" content="I'm Adrian Barrera Servan alias DJ PELUCA I comunicate & compute. I'm 4 P0bl3m S0lv3r" />
-		<meta name="author" content="Adrian Barrera Servan DJ Peluca" />
-		<meta name="keywords" content="Adrian Barrera Servan, Adrian Barrera, Adrian, DJ Peluca, djpeluca, comunicate, compute, pr0bl3m, problem, s0lv3r, solver, problem solver, pr0bl3m s0lv3r" />
+        <title>DJPELUCA | Pr0b13m S0lv3r!</title>
+        <meta name="description" content="I'm djpeluca alias Adrian Barrera Servan. I'm 4 P0bl3m S0lv3r. I communicate & compute. I do stuff" />
+		<meta name="author" content="djpeluca" />
+		<meta name="keywords" content="Adrian Barrera Servan, Adrian Barrera, Adrian, DJ Peluca, djpeluca, communicate, compute, pr0bl3m, problem, s0lv3r, solver, problem solver, pr0bl3m s0lv3r" />
 		<meta property="og:image" content="http://djpeluca.com/img/djpeluca.png"/>
-		<meta property="og:title" content="DJ Peluca | Adrian Barrera Servan"/>
+		<meta property="og:title" content="DJPELUCA | Pr0b13m S0lv3r!"/>
 		<meta property="og:url" content="http://djpeluca.com"/>
-		<meta property="og:description" content="I'm Adrian Barrera Servan alias DJ PELUCA I comunicate & compute. I'm 4 P0bl3m S0lv3r" />
-		<meta property="og:site_name" content="DJ Peluca"/>
+		<meta property="og:description" content="I'm djpeluca alias Adrian Barrera Servan. I'm 4 P0bl3m S0lv3r. I communicate & compute. I do stuff" />
+		<meta property="og:site_name" content="DJPELUCA"/>
 		<meta property="og:type" content="website"/>
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -35,14 +35,14 @@
         </script>
     </head>
     <body>
-        <h1><span id="title">DJ Peluca</span></h1>
+        <h1><span id="title">DJPELUCA</span></h1>
         <h2><span id="subtitle">communicate & compute</span></h2>
         <!--
             MADE WITH <3, HTML & BLOOD. 
             Using []
         -->
         <section class="mainwrapper">
-            <div id="djpeluca" class="mainimage" original-title="<p>I'm <b>NOT</b> a DJ!</p><p>It's just my Nickname</p></></di>">
+            <div id="djpeluca" class="mainimage" original-title="<p><b>D</b> is for Dimension</p><p><b>J</b> is for Jumper</p></></di>">
             </div>
             <!-- MENU -->
 		<div id='divmenu'>
@@ -168,7 +168,8 @@
         This site is in constant construction
         features to come are probably some jquery crazynes, html5 pseudo-games
         and maybe some better design, because probably some friend see the current site, cry
-        and offer me design improvments for free...
+        and offer me design improvments for free... <- this is not happening! c'mon friends!!!! 
+		Well.. I know, all the other stuff isn't happening also... i'm doing stuff dude/tte!=
         -->
     </body>
 </html>
